--- a/win32std.vcxproj.filters
+++ b/win32std.vcxproj.filters
@@ -2,20 +2,20 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="Source Files">
-      <UniqueIdentifier>{6512bac5-0284-4f47-8da4-14e47e8ef85b}</UniqueIdentifier>
+      <UniqueIdentifier>{85f9f755-296d-4ce3-9fbf-3e30d0883f6c}</UniqueIdentifier>
       <Extensions>cpp;c;cxx;rc;def;r;odl;idl;hpj;bat</Extensions>
     </Filter>
     <Filter Include="Header Files">
-      <UniqueIdentifier>{e9f32417-91d1-4058-902b-1266a57394fb}</UniqueIdentifier>
+      <UniqueIdentifier>{8afa9d24-94c2-4439-ad59-6a4ef4dbe7cd}</UniqueIdentifier>
       <Extensions>h;hpp;hxx;hm;inl</Extensions>
     </Filter>
     <Filter Include="Resource Files">
-      <UniqueIdentifier>{500a567c-f49c-4271-bc49-6d1c564fbc84}</UniqueIdentifier>
+      <UniqueIdentifier>{7c496396-f600-45f4-8dd8-d12fa1458d3a}</UniqueIdentifier>
       <Extensions>ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe</Extensions>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="cpp_wrappers.cpp">
+    <ClCompile Include="cpp_functions.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="registry.c">
