--- a/win32std.vcxproj
+++ b/win32std.vcxproj
@@ -162,8 +162,8 @@
       <SubSystem>Console</SubSystem>
       <OutputFile>Release/php_win32std.dll</OutputFile>
       <ImportLibrary>.\Release\php_win32std.lib</ImportLibrary>
-      <AdditionalDependencies>php7ts.lib;winmm.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>d:\Sektor\Develop\Cpp\php-sdk\phpdev\vc14\x64\php-7.1.0alpha3-src\x64\Release_TS\php-7.1.0alpha3-devel-VC14-x64\lib\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>php8ts.lib;winmm.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>..\..\lib\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
