--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -42,7 +42,7 @@ environment:
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
       ARCH: x64
       VC: vs16
-      PHP_VER: 8.2.3
+      PHP_VER: 8.3.0
       TS: 1
 
 build_script:
@@ -51,11 +51,11 @@ build_script:
     $ts_part = ''
     if ('0' -eq $env:TS) { $ts_part = '-nts' }
     $bname = 'php-devel-pack-' + $env:PHP_VER + $ts_part + '-Win32-' + $env:VC.toUpper() + '-' + $env:ARCH + '.zip'
-    echo "Download PHP8 development pack from release http://windows.php.net/downloads/releases/archives/$bname"
+    echo "Download PHP8 development pack from release http://windows.php.net/downloads/releases/$bname"
     if (-not (Test-Path c:\build-cache\$bname)) {
-            Invoke-WebRequest "http://windows.php.net/downloads/releases/archives/$bname" -OutFile "c:\build-cache\$bname"
+            Invoke-WebRequest "http://windows.php.net/downloads/releases/$bname" -OutFile "c:\build-cache\$bname"
             if (-not (Test-Path c:\build-cache\$bname)) {
-                    Invoke-WebRequest "http://windows.php.net/downloads/releases/archives/$bname" -OutFile "c:\build-cache\$bname"
+                    Invoke-WebRequest "http://windows.php.net/downloads/releases/$bname" -OutFile "c:\build-cache\$bname"
             }
     }
     
@@ -100,23 +100,3 @@ test_script:
   ps: |
 
     echo "Start tests..."
-
-    echo "Download PHP BIN..."
-    $ts_part = ''
-    if ('0' -eq $env:TS) { $ts_part = '-nts' }
-    $bname = 'php-' + $env:PHP_VER + '-Win32-' + $env:VC.toUpper() + '-' + $env:ARCH + '.zip'
-    echo "Release file URL http://windows.php.net/downloads/releases/archives/$bname"
-    if (-not (Test-Path c:\build-cache\$bname)) {
-      Invoke-WebRequest "http://windows.php.net/downloads/releases/archives/$bname" -OutFile "c:\build-cache\$bname"
-      if (-not (Test-Path c:\build-cache\$bname)) {
-        Invoke-WebRequest "http://windows.php.net/downloads/releases/archives/$bname" -OutFile "c:\build-cache\$bname"
-      }
-    }
-
-    echo "Extract PHP BIN..."
-    $dname = 'php-' + $env:PHP_VER + $ts_part + '-' + $env:VC.toUpper() + '-' + $env:ARCH
-    if (-not (Test-Path c:\build-cache\$dname)) {
-            7z x c:\build-cache\$bname -oc:\build-cache\$dname
-    }
-
-
